--- a/paper.html
+++ b/paper.html
@@ -1,1 +1,41 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Your Name - Publications</title>
+  <link rel="stylesheet" href="css/style.css">
+  <!-- Include Font Awesome for icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+</head>
+<body>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="paper.html">Publications</a>
+    <!-- Add more links as needed -->
+  </nav>
 
+  <header>
+    <h1>Publications</h1>
+  </header>
+
+  <main>
+    <div class="paper-entry">
+      <div class="paper-thumbnail">
+        <img src="images/paper1-thumbnail.jpg" alt="Paper Thumbnail">
+      </div>
+      <div class="paper-details">
+        <h2>Paper Title</h2>
+        <p class="authors">Your Name, Co-Author</p>
+        <p class="venue">Conference/Journal Name, 2023</p>
+        <div class="links">
+          <a href="pdfs/paper1.pdf" class="link-button"><i class="fas fa-file-pdf"></i> PDF</a>
+          <a href="#" class="link-button"><i class="fas fa-code"></i> Code</a>
+          <a href="#" class="link-button"><i class="fas fa-link"></i> Project Page</a>
+        </div>
+      </div>
+    </div>
+    <!-- Repeat for other papers -->
+  </main>
+</body>
+</html>
