--- a/paper.html
+++ b/paper.html
@@ -3,30 +3,34 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Your Name - Publications</title>
+  <title>Hang Shuai - Publications</title>
   <link rel="stylesheet" href="css/style.css">
-  <!-- Include Font Awesome for icons -->
+  <!-- Font Awesome for icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
+  <!-- Navigation Bar -->
   <nav>
     <a href="index.html">Home</a>
     <a href="paper.html">Publications</a>
-    <!-- Add more links as needed -->
+    <a href="https://sites.google.com/view/hangshuai/home?authuser=0" target="_blank">Google Site</a>
   </nav>
 
+  <!-- Header -->
   <header>
-    <h1>Publications</h1>
+    <h1>Hang Shuai - Publications</h1>
   </header>
 
+  <!-- Main Content -->
   <main>
+    <!-- Publication Entry -->
     <div class="paper-entry">
       <div class="paper-thumbnail">
         <img src="images/paper1-thumbnail.jpg" alt="Paper Thumbnail">
       </div>
       <div class="paper-details">
-        <h2>Paper Title</h2>
-        <p class="authors">Your Name, Co-Author</p>
+        <h2>Paper Title 1</h2>
+        <p class="authors">Hang Shuai, Co-Author 1, Co-Author 2</p>
         <p class="venue">Conference/Journal Name, 2023</p>
         <div class="links">
           <a href="pdfs/paper1.pdf" class="link-button"><i class="fas fa-file-pdf"></i> PDF</a>
@@ -35,7 +39,28 @@
         </div>
       </div>
     </div>
-    <!-- Repeat for other papers -->
+
+    <!-- Repeat for other publications -->
+    <div class="paper-entry">
+      <div class="paper-thumbnail">
+        <img src="images/paper2-thumbnail.jpg" alt="Paper Thumbnail">
+      </div>
+      <div class="paper-details">
+        <h2>Paper Title 2</h2>
+        <p class="authors">Hang Shuai, Co-Author 1, Co-Author 2</p>
+        <p class="venue">Conference/Journal Name, 2022</p>
+        <div class="links">
+          <a href="pdfs/paper2.pdf" class="link-button"><i class="fas fa-file-pdf"></i> PDF</a>
+          <a href="#" class="link-button"><i class="fas fa-code"></i> Code</a>
+          <a href="#" class="link-button"><i class="fas fa-link"></i> Project Page</a>
+        </div>
+      </div>
+    </div>
   </main>
+
+  <!-- Footer -->
+  <footer>
+    <p>&copy; 2023 Hang Shuai. All rights reserved.</p>
+  </footer>
 </body>
 </html>
