--- a/index.html
+++ b/index.html
@@ -1,1 +1,75 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Hang Shuai - Home</title>
+  <link rel="stylesheet" href="css/style.css">
+  <!-- Font Awesome for icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+</head>
+<body>
+  <!-- Navigation Bar -->
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="paper.html">Publications</a>
+    <a href="https://sites.google.com/view/hangshuai/home?authuser=0" target="_blank">Google Site</a>
+  </nav>
 
+  <!-- Header -->
+  <header>
+    <div class="profile">
+      <img src="images/hangshuai.jpg" alt="Hang Shuai" class="profile-photo">
+      <div class="profile-info">
+        <h1>Hang Shuai</h1>
+        <p>PhD Candidate, [Your University]</p>
+        <p>Research Interests: Machine Learning, Computer Vision, Natural Language Processing</p>
+      </div>
+    </div>
+  </header>
+
+  <!-- Main Content -->
+  <main>
+    <!-- About Section -->
+    <section class="about">
+      <h2>About Me</h2>
+      <p>
+        Hello! I am Hang Shuai, a PhD candidate at [Your University]. My research focuses on [specific research areas, e.g., machine learning, computer vision, etc.]. I am passionate about solving real-world problems using cutting-edge technologies.
+      </p>
+      <p>
+        I have published several papers in top-tier conferences and journals, including [Conference/Journal Names]. My work has been recognized with [awards/honors, if any].
+      </p>
+    </section>
+
+    <!-- Research Interests -->
+    <section class="research-interests">
+      <h2>Research Interests</h2>
+      <ul>
+        <li>Machine Learning</li>
+        <li>Computer Vision</li>
+        <li>Natural Language Processing</li>
+        <li>AI for Social Good</li>
+      </ul>
+    </section>
+
+    <!-- Contact Section -->
+    <section class="contact">
+      <h2>Contact</h2>
+      <p>
+        Email: <a href="mailto:your-email@example.com">your-email@example.com</a>
+      </p>
+      <p>
+        GitHub: <a href="https://github.com/your-username" target="_blank">github.com/your-username</a>
+      </p>
+      <p>
+        Google Scholar: <a href="https://scholar.google.com/citations?user=your-id" target="_blank">Google Scholar Profile</a>
+      </p>
+    </section>
+  </main>
+
+  <!-- Footer -->
+  <footer>
+    <p>&copy; 2023 Hang Shuai. All rights reserved.</p>
+  </footer>
+</body>
+</html>
