--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
   <!-- Header -->
   <header>
     <div class="profile">
-      <img src="images/hangshuai.jpg" alt="Hang Shuai" class="profile-photo">
+      <img src="images/HangShuai.jpg" alt="Hang Shuai" class="profile-photo">
       <div class="profile-info">
         <h1>Hang Shuai</h1>
-        <p>PhD Candidate, [Your University]</p>
+        <p>PhD Candidate, Clemson University</p>
         <p>Research Interests: Machine Learning, Computer Vision, Natural Language Processing</p>
       </div>
     </div>
